brat/test/golden/error/badvec.brat.golden
Error in test/golden/error/badvec.brat on line 2:
v3 = [1]
      ^

  Expected vector of length 3
from the type:  Vec(Int, 3)
but got vector: [1]
of length 1


